# MowgliRover

./: .gitignore  .gitmodules  README.md
src/mowgli/: CMakeLists.txt  package.xml
src/mowgli/cfg/: MowgliProxy.cfg
src/mowgli/config/: mowgli_config.sh.example
src/mowgli/description/: mowgli.xml  mowgli_19062022.xml  mowgli_old.xml  robot_core.xacro
src/mowgli/dev/: dr_calibration.py  dr_clear_gps_outage.sh  dr_enabletf.sh  dr_fake_gps_outage.sh  dr_outage_sim.sh  dr_reset.sh  send_goal.py  show_heading_all.py  update_dr_state.py
src/mowgli/include/: bt_approachpose.h  bt_blademotorcontrol.h  bt_docking.h  bt_dockingapproach.h  bt_dockingapproachpoint.h  bt_drivebackward.h  bt_drivebackwards.h  bt_driveforward.h  bt_env.h  bt_followpath.h  bt_forloop.h  bt_generate2dpose.h  bt_getfirstpose.h  bt_getmowpath.h  bt_getmowplan.h  bt_gpscontrol.h  bt_mowcontrol.h  bt_mowpathapproachpoint.h  bt_mowpathfollow.h  bt_nodes.h  bt_status.h  bt_trimposes.h  bt_undocking.h  mowgli_bt.h
src/mowgli/launch/: mowgli.launch  mowgli_bt.launch  mowgli_bt2.launch  mowgli_bt_test.launch
src/mowgli/msg/: magnetometer.msg  status.msg
src/mowgli/params/: calibration_local_planner.yaml  docking_ftc_local_planner.yaml  ekf.yaml  free_local_planner.yaml  free_move_local_planner.yaml  ftc_local_planner.yaml  ftc_local_planner_tuning.yaml  global_costmap_params.yaml  move_base_flex.yaml  twist_mux_topics.yaml
src/mowgli/scripts/: bridge.conf.example  ha_om_bridge.py  om_ha_bridge.py  str2str.sh
src/mowgli/src/: mowgli_blade.cpp  mowgli_bt.cpp  mowgli_proxy.cpp  tree.xml
(+78 files in other folders)
